internal/kgateway/translator/gateway/testutils/inputs/delegation/multi_level_multiple_parents.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: infra
  labels:
    app: apis
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "api.example.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api1
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: apiproduct-1
        namespace: default
    - matches:
      - path:
          type: PathPrefix
          value: /api2
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: apiproduct-2
        namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apiproduct-1
  namespace: default
  labels:
    app: apis
  annotations:
    delegation.kgateway.dev/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httpbin
        namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apiproduct-2
  namespace: default
  labels:
    app: apis
  annotations:
    delegation.kgateway.dev/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httpbin
        namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
  labels:
    app: apis
  annotations:
    delegation.kgateway.dev/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: httpbin
        namespace: default
        port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8000
